apps/nodejs-poolcontroller/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nodejs-poolcontroller
spec:
  externalTrafficPolicy: Local
  ports:
  - name: dashpanel
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: nodejs-poolcontroller
  type: LoadBalancer
