apps/nodejs-poolcontroller/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: nodejs-poolcontroller
      #    annotations:
      #        nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8, 100.64.0.0/10
spec:
    ingressClassName: nginx
    rules:
        - host: pool
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: nodejs-poolcontroller
                            port:
                                number: 8080
    tls:
        - hosts:
              - pool
